# io_scene_mw

./: .gitignore  README.md  __init__.py  blender_manifest.toml  nif_export.py  nif_import.py  nif_shader.py  nif_utils.py  pyproject.toml  readme.md
.github/: FUNDING.yml
.github/workflows/: build-release-archive.yaml
assets/: shader.blend
lib/es3/nif/: AvoidNode.py  BSMirroredNode.py  BrickNiExtraData.py  NiAVObject.py  NiAccumulator.py  NiAlphaAccumulator.py  NiAlphaController.py  NiAlphaProperty.py  NiAmbientLight.py  NiAutoNormalParticles.py  NiAutoNormalParticlesData.py  NiBSAnimationManager.py  NiBSAnimationNode.py  NiBSPArrayController.py  NiBSPNode.py  NiBSParticleNode.py  NiBillboardNode.py  NiBinaryStream.py  NiBltSource.py  NiBoundingVolume.py  NiBoxBV.py  NiCamera.py  NiClusterAccumulator.py  NiCollisionSwitch.py  NiColorData.py  NiDX8Renderer.py  NiDirectionalLight.py  NiDitherProperty.py  NiDynamicEffect.py  NiEmitterModifier.py  NiExtraData.py  NiFlipController.py  NiFloatController.py  NiFloatData.py  NiFltAnimationNode.py  NiFogProperty.py  NiGeomMorpherController.py  NiGeometry.py  NiGeometryData.py  NiGravity.py  (+86 more)
lib/es3/utils/: flags.py  io.py  linked_list.py  math.py  meshoptimizer.cp310-win_amd64.pyd  meshoptimizer.py  (+5 more)
operators/: __init__.py  addon_updater.py  create_shader.py  developer_extras.py  export_scene.py  import_scene.py
panels/: __init__.py  markers_panel.py  material_panel.py  object_panel.py
preferences/: __init__.py  addon_prefs.py  texture_path.py
properties/: __init__.py  material_properties.py  object_properties.py
(+2 files in other folders)
