[tool.poetry]
name = "io_scene_mw"
version = "0.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
numpy = "^1.22"
fake-bpy-module-latest = "^20220602"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
